# glinder

./: Cargo.toml  README.md  spin.toml
.github/workflows/: spin-deploy.yml
examples/: mira.txt  ryder.txt
src/: auth.rs  db.rs  lib.rs  models.rs
www/: admin.html  card.css  card.js  edit.html  index.html  style.css  upload.html
